# rin

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  docker-compose.yml  pyproject.toml  test-install.sh  test-pipeline.sh
.claude/: policy.yaml  settings.json
.claude/agents/: code-edit.md  code-review.md  validate.md
.claude/commands/: code-review.md  commit.md  pr.md
config/: mcp-servers.json
context/: rin-context.md
docker/: Dockerfile.postgres  init-db.sql
launchd/: com.rin.memory-dream.plist  com.rin.ollama.plist  com.rin.proxy.plist  com.rin.session-harvest.plist  com.rin.session-review.plist
scripts/: bench-memory-recall.py  bench-memory-recall.sh  bench-skill.sh  intent-suggest.sh  memory-dream.sh  migrate-to-pg.py  migrate-vectors-v3.py  rin  rin-cc  rin-memory-recall.py  rin-proxy-test.sh  rin-team  session-harvest.py  session-notes.py  session-picker.py  session-review.sh  session-summarize.py  statusline.sh  sync-harness.sh  sync-mcp.py
scripts/hooks/: post-tool-routing.py
src/rin_memory/: __init__.py  __main__.py  chunking.py  embedding.py  ingest.py  rebuild_vectors.py  routing.py  schema.py  server.py  store.py
src/rin_memory_go/: Makefile  chunk.go  chunk_test.go  cmd_count.go  cmd_dedupe.go  cmd_insert_log.go  cmd_post_agent_quality.go  cmd_post_error_capture.go  cmd_post_session_summary.go  cmd_post_skill_hook.go  cmd_pre_skill_hook.go  cmd_promote_cross_project.go  cmd_recall.go  (+28 more)
tests/: test_chunking.py  test_hybrid_search.py  test_project_scoping.py  test_recall.py  test_routing.py
(+49 files in other folders)
