[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rin-memory"
version = "0.1.0"
description = "Long-term memory MCP server for RIN development agent"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "lancedb>=0.15.0",
    "ollama>=0.4.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.scripts]
rin-memory = "rin_memory.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
