[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rin"
version = "0.1.0"
description = "Autonomous development agent with persistent memory"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = []
